--- a/style.css
+++ b/style.css
@@ -66,11 +66,12 @@ tr :nth-child(3){
 .span-restart {
     cursor: pointer;
     font-size: xx-large;
-    border-radius: 10%;
+    border-radius: 10px;
     background: whitesmoke;
     width: 200px;
     text-align: center;
     border: 1px solid #e8e8e8;
+    margin: 5px 0;
 }
 .d-spn-res {
     display: flex;
@@ -96,7 +97,7 @@ tr :nth-child(3){
     justify-content: space-around;
     border: 1px solid whitesmoke;
     background-color: white;
-    border-radius: 20%;
+    border-radius: 20px;
 }
 .span-divRight {
     width: 25%;
@@ -105,7 +106,7 @@ tr :nth-child(3){
     justify-content: space-around;
     border: 1px solid whitesmoke;
     background-color: white;
-    border-radius: 20%;
+    border-radius: 20px;
 }
 
 .el-span {
@@ -121,11 +122,12 @@ tr :nth-child(3){
 .span-reset {
     cursor: pointer;
     font-size: xx-large;
-    border-radius: 10%;
+    border-radius: 10px;
     background: whitesmoke;
     width: 200px;
     text-align: center;
     border: 1px solid #e8e8e8;
+    margin-bottom: 5px;
 }
 .inp-pht-x {
     display: flex;
